<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">뮤직플레이어</string>
    <string name="app_name_explorer">탐색기</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">플레이어</string>
    <string name="title_section2">목록</string>
    
    <string name="list_info_text">추가할 항목을 선택하세요</string>
    <string name="list_add_file">파일</string>
    <string name="list_add_dir">폴더</string>
    <string name="list_clear">초기화</string>
    
    <string name="list_play_playing">▶</string>
    <string name="list_play_pause">||</string>
    <string name="list_play_stop">■</string>
    <string name="list_play_previous">《</string>
    <string name="list_play_next">》</string>

    <string name="ok_button">확인</string>
    <string name="cancel_button">취소</string>
</resources>
