<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firsttabLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/listPlayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/listPlayImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/tableLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/listPlayTitle"
        android:src="@drawable/ic_launcher" />

    <SeekBar
        android:id="@+id/listPlaySeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/listPlayDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="00:00" />
    
    <CheckBox
        android:id="@+id/listPlayRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listPlaySeek"
        android:layout_alignParentLeft="true"
     	android:layout_marginBottom="10dp"
        android:text="랜덤 재생" />
    
    <CheckBox
        android:id="@+id/listPlayLoop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/listPlayRandom"
        android:layout_above="@+id/listPlaySeek"
     	android:layout_marginBottom="10dp"
        android:text="한곡 반복" />
    
    <TextView
        android:id="@+id/listPlayVolumeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listPlaySeek"
        android:layout_alignTop="@+id/listPlayVolume"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/listPlayLoop"
        android:gravity="center"
        android:text="볼륨" />
    
    <SeekBar
        android:id="@+id/listPlayVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/listPlayVolumeText"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/listPlaySeek"
     	android:layout_marginBottom="10dp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/listPlayRandom"
        android:id="@+id/tableLayout2">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/listPlayPrevious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/view_border"
                android:text="@string/list_play_previous" />

            <Button
                android:id="@+id/listPlayPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/view_border"
                android:text="@string/list_play_pause" />

            <Button
                android:id="@+id/listPlayPlaying"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/listPlayLoop"
                android:layout_alignRight="@+id/listPlayLoop"
                android:layout_below="@+id/listPlayImage"
                android:background="@layout/view_border"
                android:text="@string/list_play_playing" />

            <Button
                android:id="@+id/listPlayStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/view_border"
                android:text="@string/list_play_stop" />

            <Button
                android:id="@+id/listPlayNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@layout/view_border"
                android:text="@string/list_play_next" />

        </TableRow>

    </TableLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/listPlaySeek">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="185dp"
                android:layout_height="300dp"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/a"

                />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="185dp"
                android:layout_height="300dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/imageButton1"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/b"

                />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="185dp"
                android:layout_height="300dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageButton1"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/c" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="185dp"
                android:layout_height="300dp"
                android:layout_below="@+id/imageButton2"
                android:layout_toEndOf="@+id/imageButton3"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/d" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="185dp"
                android:layout_height="300dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageButton3"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/e" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="185dp"
                android:layout_height="300dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/imageButton4"
                android:layout_toEndOf="@+id/imageButton5"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/f" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
